--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,7 @@ a {
 
 #logo {
     width: 50%;
-    margin-top: -15px;
-    margin-bottom: -15px;
+    margin-top: 5px;
 }
 
 #nav {
